# sudo2

./: .gitlab-ci.yml  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
examples/: backtrace.rs  environment.rs  pkexec.rs  suid.rs
src/: lib.rs
