[package]
name = "sudo2"
description = "Detect if you are running as root, restart self with sudo or any other wrapper if needed or setup uid zero when running with the SUID flag set."

version = "0.2.1"
authors = [
  "Stefan Schindler <dns2utf8@estada.ch>",
  "Alexandria P",
  "Cappy Ishihara <cappy@fyralabs.com>",
  "Dilawar Singh <dilawar.s.rajput@gmail.com>",
]
license = "MIT OR Apache-2.0"
edition = "2021"

keywords = ["suid", "sudo", "pkexec", "polkit", "doas"]


repository = "https://github.com/dilawar/sudo2"
readme = "README.md"
include = ["README.md", "LICENSE", "src/**"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "~0.2"
tracing = "0.1.40"
wildmatch = "2.3.4"

[dev-dependencies]
simple_logger = ">=4"
tracing-test = "0.2.5"
